logs/cloudshell-tg-breaking-point.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/api'...
Compiling './lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py'...
***   File "./lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py", line 120
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 285
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/helpers/scripts'...
Compiling './lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py'...
***   File "./lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py", line 101
    print 'No config file found at:', filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/session'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point/flows'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point/rest_actions'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point/rest_api'...
Listing './lib/python3.5/site-packages/cloudshell/tests/tg/breaking_point/runners'...
Listing './lib/python3.5/site-packages/cloudshell/tests/utils'...
Listing './lib/python3.5/site-packages/cloudshell/tg'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point/flows'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point/rest_actions'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point/rest_api'...
Listing './lib/python3.5/site-packages/cloudshell/tg/breaking_point/runners'...
Listing './lib/python3.5/site-packages/cloudshell_automation_api-7.0.0.132.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.1.153.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-3.0.229.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_tg_breaking_point-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.11.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/python-wheels'...
